unpackaged/main/default/objects/ia_crm__Transaction_Defintion__c/ia_crm__Transaction_Defintion__c.object-meta.xml
<CustomObject>
    <label>Transaction Definition</label>
    <nameField>
        <label>Transaction Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>