unpackaged/main/default/objects/ia_crm__Transaction_Defintion__c/fields/ia_crm__Allow_from_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Allow_from_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow from Salesforce</label>
    <type>Checkbox</type>
</CustomField>