unpackaged/main/default/objects/ia_crm__Transaction_Defintion__c/fields/ia_crm__Include_line_item_details__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Include_line_item_details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include line item details</label>
    <type>Checkbox</type>
</CustomField>