unpackaged/main/default/objects/ia_crm__Transaction_Defintion__c/fields/ia_crm__Intacct_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Configuration</label>
    <referenceTo>ia_crm__Intacct_Configuration__c</referenceTo>
    <relationshipName>Transaction_Defintions</relationshipName>
    <type>Lookup</type>
</CustomField>