unpackaged/main/default/objects/ia_crm__Transaction_Defintion__c/fields/ia_crm__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Entity</label>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Transaction Definitions</relationshipLabel>
    <relationshipName>Transaction_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>